# MyGame

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  VulkanRenderer.cpp  VulkanRenderer.h  main.cpp
app/src/main/cpp/GameEngine/: CMakeLists.txt  EventHandler.cpp  EventHandler.h  GameEngine.cpp  GameEngine.h
app/src/main/cpp/GameEngine/Containers/: DynamicArray.h
app/src/main/cpp/GameEngine/EntityComponent/: CMakeLists.txt  Mesh.cpp  Mesh.h
app/src/main/cpp/GameEngine/GFX/: CMakeLists.txt  GfxDevice.cpp  GfxDevice.h  GfxUtils.h  IGfxDevice.cpp  IGfxDevice.h  TextureSampler.cpp  TextureSampler.h
app/src/main/cpp/GameEngine/GFX/vulkan/: CMakeLists.txt  GfxBuffer.h  GfxDevice.cpp  GfxDevice.h  GfxTexture.cpp  GfxTexture.h  GfxTypes.h  GfxUtils.h  TextureSampler.cpp  TextureSampler.h
app/src/main/cpp/GameEngine/Platform/: CMakeLists.txt
app/src/main/cpp/GameEngine/Platform/Android/: CMakeLists.txt  PlatformAndroid.cpp  PlatformAndroid.h
app/src/main/cpp/GameEngine/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h
app/src/main/cpp/GameEngine/Utils/: CMakeLists.txt  Definitions.h  IFileManager.cpp  IFileManager.h  MemoryManager.cpp  MemoryManager.h  ThreadSafeHandle.h
app/src/main/java/com/example/mygame/: Definitions.kt  MainActivity.kt
app/src/main/res/layout/: main_activity.xml
app/src/main/res/values/: strings.xml
app/src/main/shaders/: vertex_shader.vert
gradle/wrapper/: gradle-wrapper.properties
